# embedded-driver

./: CMakeLists.txt  Makefile  README.md
include/: device_registers.h  interrupt_handler.h  motor_controller.h  sensor_array.h  shared_mem.h
src/: device_registers.c  interrupt_handler.c  main.c  motor_controller.c  sensor_array.c  shared_mem.c
tests/: test_driver.c
